[project]
name = "openenv-disaster-response"
version = "0.1.0"
description = "OpenEnv Disaster Response Coordination System"
authors = [
    {name = "Harshalee Malu"}
]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv==0.1.13"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"